src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

html {
  font-size: 100%;
} /*16px*/

:root {
  /* colors */
  /* primary */
  --primary-100: #e0deff;
  --primary-200: #c1beff;
  --primary-300: #a29dff;
  --primary-400: #837dff;
  --primary-500: #645cff;
  --primary-600: #504acc;
  --primary-700: #3c3799;
  --primary-800: #282566;
  --primary-900: #141233;

  /* grey */
  --grey-50: #f8fafc;
  --grey-100: #f1f5f9;
  --grey-200: #e2e8f0;
  --grey-300: #cbd5e1;
  --grey-400: #94a3b8;
  --grey-500: #64748b;
  --grey-600: #475569;
  --grey-700: #334155;
  --grey-800: #1e293b;
  --grey-900: #0f172a;

  /* extra colors */
  --black: #222;
  --white: #fff;
  --red-light: #f8d7da;
  --red-dark: #842029;
  --green-light: #d1e7dd;
  --green-dark: #0f5132;

  /* fonts */
  --headingFont: 'Poppins', sans-serif;
  --bodyFont: 'Poppins', sans-serif;
  --smallText: 0.7em;

  /* rest of the variables */
  --backgroundColor: var(--grey-50);
  --textColor: var(--grey-900);
  --borderRadius: 0.25rem;
  --letterSpacing: 1px;
  --transition: all 0.3s ease-in-out;
  --maxWidth: 1120px;
  --fixedWidth: 600px;

  /* box-shadow */
  --shadow-1: 0 1px 3px 0 rgb(0, 0, 0, 0.1), 0 1px 2px 0 rgb(0, 0, 0, 0.06);
  --shadow-2: 0 4px 6px -1px rgb(0, 0, 0, 0.1),
    0 2px 4px -1px rgb(0, 0, 0, 0.06);
  --shadow-white-2: 0 4px 6px -1px hsla(0, 0%, 100%, 0.2),
    0 2px 4px -1px rgb(0, 0, 0, 0.06);
  --shadow-3: 0 10px 15px -3px rgb(0, 0, 0, 0.1),
    0 4px 6px -2px rgb(0, 0, 0, 0.05);
  --shadow-4: 0 20px 25px -5px rgb(0, 0, 0, 0.1),
    0 10px 10px -5px rgb(0, 0, 0, 0.04);
  --shadow-light-4: 0 20px 25px -5px hsla(0, 0%, 100%, 0.2),
    0 10px 10px -5px rgb(0, 0, 0, 0.04);
}

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background: var(--backgroundColor);
  font-family: var(--bodyFont);
  font-weight: 400;
  line-height: 1.75;
  color: var(--textColor);
  letter-spacing: -0.025em;
}

p {
  margin-bottom: 1.5rem;
  max-width: 40em; /*35em to 45em*/
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0;
  margin-bottom: 0;
  font-family: var(--headingFont);
  font-weight: 400;
  line-height: 1.3;
  text-transform: capitalize;
}

h1 {
  margin-top: 0;
  font-size: 3.052rem;
}

h2 {
  font-size: 2.441rem;
}

h3 {
  font-size: 1.953rem;
}

h4 {
  font-size: 1.563rem;
}

h5 {
  font-size: 1.25rem;
}

small,
.text_small {
  font-size: var(--smallText);
}

a {
  text-decoration: none;
}

ul {
  list-style-type: none;
  padding: 0;
}

.container {
  width: 50vw;
  border-radius: var(--borderRadius);
  max-width: var(--max-width);
}

.img:not(.logo) {
  width: 100%;
  /* display: block; is important */
  display: block;
  object-fit: cover;
}

.btn {
  cursor: pointer;
  background: transparent;
  border: 1px solid var(--grey-400);
  border-radius: 9999px;
  letter-spacing: var(--letterSpacing);
  padding: 0.85rem 1.35rem;
  transition: var(--transition);
  text-transform: capitalize;
  display: inline-block;
  font-weight: 600;
}

.btn:hover {
  box-shadow: var(--shadow-2);
}

.btn-dark {
  color: var(--white);
  background: var(--black);
  font-weight: 400;
  letter-spacing: 0.025em;
}

.uppercase {
  text-transform: uppercase;
}

/*
.btn-hipster {
  color: var(--primary-500);
  background: var(--primary-200);
}
.btn-hipster:hover {
  color: var(--primary-200);
  background: var(--primary-700);
} */

.btn-block {
  width: 100%;
}

/* alerts */
.alert {
  padding: 0.375rem 0.75rem;
  margin-bottom: 1rem;
  border-color: transparent;
  border-radius: var(--borderRadius);
}

.alert-danger {
  color: var(--red-dark);
  background: var(--red-light);
}

.alert-success {
  color: var(--green-dark);
  background: var(--green-light);
}

.form {
  width: 90vw;
  max-width: var(--fixedWidth);
  background: var(--white);
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
  padding: 2rem 2.5rem;
  margin: 3rem auto;
}

.form-label {
  display: block;
  font-size: var(--smallText);
  margin-bottom: 0.5rem;
  text-transform: capitalize;
  letter-spacing: var(--letterSpacing);
}

.form-input,
.form-textarea {
  width: 100%;
  padding: 0.375rem 0.75rem;
  border-radius: var(--borderRadius);
  background: var(--backgroundColor);
  border: 1px solid var(--grey-200);
  outline: none;
}

.form-input:focus,
.form-textarea:focus {
  border: 0.25rem solid var(--primary-500);
}

.form-row {
  margin-bottom: 1rem;
}

.form-textarea {
  height: 7rem;
}

::placeholder {
  font-family: inherit;
  color: var(--grey-400);
}

.form-alert {
  color: var(--red-dark);
  letter-spacing: var(--letterSpacing);
  text-transform: capitalize;
}

.loading {
  height: 6rem;
  width: 6rem;
  border: 0.25rem solid var(--grey-400);
  border-top-color: var(--primary-500-500);
  border-radius: 50%;
  animation: load 0.6s linear infinite;
}

@keyframes load {
  to {
    transform: rotateZ(360deg);
  }
}

.loading {
  margin-left: auto;
  margin-right: auto;
}

/* title */

.title-underline {
  height: 0.25rem;
  width: 7rem;
  background: var(--primary-500);
  margin: 0 auto;
  margin-top: -1rem;
}
/*  global classes */

/* section */
.section {
  padding: 5rem 0;
}

.section-center {
  width: 95vw;
  margin: 0 auto;
  max-width: 1440px;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 4px;
}

.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}

.gap-1 {
  gap: 4px;
}

.max-w-3xl {
  max-width: 60rem;
}

.justify-between {
  justify-content: between;
}

.text-gray-500 {
  color: var(--grey-500);
}

.font-normal {
  font-size: 1.15rem;
}

/* ui */

.logo {
  font-size: 1.75rem;
  letter-spacing: -0.05em;
  margin-right: auto;
}

.nav-center {
  display: flex;
  align-items: flex-start;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.links-container {
  display: none;
}

.border-error {
  border: 2px solid red;
}

@media screen and (min-width: 768px) {
  nav {
    padding-top: 0.5rem;
  }

  .links-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0.5rem 3rem;
    margin-right: 6rem;
  }

  .links-container > .link,
  .active-link {
    letter-spacing: -0.025em;
    color: var(--grey-400);
    font-size: 0.85rem;
    transition: var(--transition);
    font-weight: 600;
  }

  .links-container > .link:hover,
  .active-link {
    color: var(--grey-700);
  }
}

.hero-align {
  padding-top: 4rem;
  display: flex;
  flex-direction: column;
  gap: 8px;
  text-align: center;
  padding-bottom: 2rem;
}

.font-main-header {
  font-size: 2rem;
  width: 80vw;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1rem;
}

.text-black {
  color: var(--black);
  font-weight: 600;
}

.inline-block {
  display: inline-block;
}

.inline-block-items {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.para-last-line {
  max-width: 15rem;
  color: var(--grey-500);
  margin-left: auto;
  margin-right: auto;
  font-weight: 500;
}

.center-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  overflow: hidden;
}

.relative {
  position: relative;
  overflow: hidden;
}

.star {
  position: absolute;
  top: 0%;
  right: 80%;
  color: var(--grey-200);
  font-size: 3rem;
  transform: rotateZ(-60deg);
}

@media screen and (min-width: 768px) {
  .center-content {
    display: inline-block;
  }
  .para-last-line {
    display: inline-block;
    margin-left: 2rem;
  }
  .btn-dark {
    display: inline-block;
    margin-right: -1rem;
    order: -1;
  }
  .max-w-3xl {
    width: 90vw;
    max-width: 48rem;
  }

  .font-normal {
    font-size: 1.35rem;
  }
  .font-main-header {
    display: inline;
    font-size: 3.5rem;
  }

  .hero-align {
    padding-top: 0;
    gap: 8px;
    text-align: left;
  }

  .inline-block-items {
    padding-left: 1rem;
    display: inline-flex;
    flex-direction: row;
    gap: 0;
    justify-content: space-between;
    align-items: center;
    /* border: 2px solid black; */
  }

  .star {
    top: 25%;
    right: 10%;
  }
}

@media screen and (min-width: 1280px) {
  .star-moon {
    position: absolute;
    top: 0%;
    right: -30%;
    overflow: hidden;
    color: var(--grey-400);
  }

  .star {
    top: 25%;
    right: 30%;
  }

  .circle {
    height: 50rem;
    width: 50rem;
    border-radius: 50%;
    border: 2px solid var(--grey-400);
  }
}

.img-container {
  height: 15.5rem;
  width: 100%;
  overflow: hidden;
}

.img-container > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media screen and (min-width: 768px) {
  .cards-container {
    display: grid;
    grid-template-columns: 1fr 1fr 2fr;
    gap: 0;
  }
}

